updated useraccounts.jsx to create user accounts and create server.js and users.db in user.api

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "deploy": "gh-pages -d build",
     "preinstall": "npx npm-force-resolutions"
   },
+  "proxy": "http://localhost:3001",
   "resolutions": {
     "react-error-overlay": "6.0.9"
   },
