--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@chakra-ui/react": "2.6.1",
     "@chakra-ui/system": "2.5.7",
     "@chakra-ui/theme-tools": "^1.3.6",
+    "@elastic/elasticsearch": "^9.2.0",
     "@emotion/cache": "^11.12.0",
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
@@ -17,7 +18,9 @@
     "@testing-library/user-event": "^14.5.2",
     "apexcharts": "3.50.0",
     "axios": "^1.12.0",
+    "bcrypt": "^6.0.0",
     "framer-motion": "^11.3.7",
+    "jsonwebtoken": "^9.0.2",
     "npm-force-resolutions": "^0.0.10",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
