--- a/user-api/package.json
+++ b/user-api/package.json
@@ -7,13 +7,14 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.11.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.7"
   },
   "description": "",
-  "devDependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC"
