--- a/user-api/package.json
+++ b/user-api/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
     "sqlite3": "^5.1.7"
   },
   "description": "",
